--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -41,6 +41,7 @@ pipeline {
             steps {
                 script{
                         sh '''
+                        cd python-app/
                         cat python-deploy.yaml
                         sed -i "s|techyboy987/basic-python-app:[^[:space:]]*|techyboy987/basic-python-app:${BUILD_NUMBER}|g" python-deploy.yaml
                         cat python-deploy.yaml
