--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
                         git add python-deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
-                        git push https://github.com/EkanshJain98/jenkins.git HEAD:main
+                        git push https://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@github.com/EkanshJain98/jenkins.git HEAD:main
                         '''                        
                 }
             }
