--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -52,7 +52,8 @@ pipeline {
                         git add python-deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
-                        git push https://github.com/EkanshJain98/jenkins.git HEAD:main
+                        git remote set-url origin https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/EkanshJain98/jenkins.git
+                        git push origin HEAD:main
                         '''                        
                 }
             }
